--- a/index.html
+++ b/index.html
@@ -609,5 +609,22 @@ function output(collection,format,count) {
 	}
 }
 </script>
+<script type="text/javascript">
+//<![CDATA[
+var sc_project=8786214; 
+var sc_invisible=1; 
+var sc_security="d757d0ed"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter_xhtml.js'></"+"script>");
+//]]>
+</script>
+<noscript><div class="statcounter"><a title="hit counter"
+href="http://statcounter.com/free-hit-counter/"
+class="statcounter"><img class="statcounter"
+src="http://c.statcounter.com/8786214/0/d757d0ed/1/"
+alt="hit counter" /></a></div></noscript>
 </body>
 </html>
