--- a/index.html
+++ b/index.html
@@ -626,5 +626,18 @@ href="http://statcounter.com/free-hit-counter/"
 class="statcounter"><img class="statcounter"
 src="http://c.statcounter.com/8786214/0/d757d0ed/1/"
 alt="hit counter" /></a></div></noscript>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-39288325-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
