--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
 	font-size: 10px;
 	color: #EEE;
 	background-color: #41464f;
+        -webkit-text-size-adjust: none;
 }
 #nav-fancy {
 	height: 40px;
