--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
 	color: #EEE;
 	background-color: #41464f;
 	min-width: 1120px;
+	min-height: 100%;
 	-webkit-text-size-adjust: 100%;
 }
 #nav-fancy {
