--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width; initial-scale=1.0;" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Frame Rate Distribution</title>
 <link href='reset.css' rel='stylesheet' type='text/css'>
 <link href='toggle-switch.css' rel='stylesheet' type='text/css'>
