--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ div.datatable div.datarow {
     	<span>F</span><span>r</span><span>a</span><span>m</span><span>e</span> <span>r</span><span>a</span><span>t</span><span>e</span>
         <span>D</span><span>i</span><span>s</span><span>t</span><span>r</span><span>i</span><span>b</span><span>u</span><span>t</span><span>i</span><span>o</span><span>n</span>
     </div>
-	<div id="setInterval-tab" class="tab selected-tab">setInterval <input id="setInterval-delay" type="text" value="16" style="position: relative; width:32px; height: 20px; outline:none; border:none; background-color:#41464f; -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.8); -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.8); box-shadow: inset 0 0 3px rgba(0,0,0,0.8); font-family: 'Fjalla One', sans-serif; font-size: 16px; line-height:12px; color:#fff; text-shadow: 0 -1px 0 #000000; text-align:center;" /></div>
+	<div id="setInterval-tab" class="tab selected-tab">setInterval <input id="setInterval-delay" type="number" value="16" style="position: relative; width:32px; height: 20px; outline:none; border:none; background-color:#41464f; -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.8); -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.8); box-shadow: inset 0 0 3px rgba(0,0,0,0.8); font-family: 'Fjalla One', sans-serif; font-size: 16px; line-height:12px; color:#fff; text-shadow: 0 -1px 0 #000000; text-align:center;" /></div>
     <div id="requestAnimationFrame-tab" class="tab">requestAnimationFrame</div>
     <div id="pause-tab">PAUSE</div>
     <div id="social">
