--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Comparison between setInterval and requestAnimationFrame" />
 <meta name="viewport" content="width=device-width, initial-scale=0.2" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<title>Frame Rate Distribution</title>
+<title>Frame Rate Distribution: setInterval vs requestAnimationFrame</title>
 <link href='reset.css' rel='stylesheet' type='text/css' />
 <link href='toggle-switch.css' rel='stylesheet' type='text/css' />
 <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css' />
